<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm.AddAlarmFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:elevation="0dp"
            android:paddingVertical="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set_alarm"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/close"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:adjustViewBounds="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_close" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alarmTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topAppBar"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:hint="Alarm Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/alarmEditField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarmTextField"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_600"
        android:text="Time"
        android:textSize="22sp" />

    <TextClock
        android:id="@+id/digitalClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_title"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_600"
        android:format12Hour="hh:mm a"
        android:paddingHorizontal="20dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="45sp"
        tools:text="10:30 am" />

    <TextView
        android:id="@+id/repeat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/digitalClock"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_600"
        android:text="Repeat"
        android:textSize="22sp" />


    <LinearLayout
        android:id="@+id/repeat_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_title"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_sun"
            style="@style/toggleButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/btn_toggle"
            android:textOff="@string/sun"
            android:textOn="@string/sun" />

        <ToggleButton
            android:id="@+id/toggle_mon"
            style="@style/toggleButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/btn_toggle"
            android:textOff="@string/mon"
            android:textOn="@string/mon" />

        <ToggleButton
            android:id="@+id/toggle_tue"
            style="@style/toggleButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/btn_toggle"
            android:textOff="@string/tue"
            android:textOn="@string/tue" />

        <ToggleButton
            android:id="@+id/toggle_wed"
            style="@style/toggleButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/btn_toggle"
            android:textOff="@string/wed"
            android:textOn="@string/wed" />

        <ToggleButton
            android:id="@+id/toggle_thu"
            style="@style/toggleButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/btn_toggle"
            android:textOff="@string/thu"
            android:textOn="@string/thu" />

        <ToggleButton
            android:id="@+id/toggle_fri"
            style="@style/toggleButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/btn_toggle"
            android:textOff="@string/fri"
            android:textOn="@string/fri" />

        <ToggleButton
            android:id="@+id/toggle_sat"
            style="@style/toggleButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/btn_toggle"
            android:textOff="@string/sat"
            android:textOn="@string/sat" />

    </LinearLayout>


    <TextView
        android:id="@+id/playlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_days"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_600"
        android:text="Playlist"
        android:textSize="22sp" />

    <Button
        android:id="@+id/next_btn"
        style="@style/ButtonFancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/confirm"
        app:backgroundTint="@null" />


</RelativeLayout>